# windebloat

./: CMakeLists.txt  README
gui/: CMakeLists.txt  FeatureUninstaller.cpp  FeatureUninstaller.h  Main.cpp  winfeatures.h  winfunctionality.h  winservices.h
gui/ui/: Menu.cpp  Menu.h  menu.ui
libdebloat/: CMakeLists.txt  Downloader.cpp  Downloader.h  PackageManager.cpp  PackageManager.h  Registry.cpp  Registry.h  RunProcess.cpp  RunProcess.h  ServiceController.cpp  ServiceController.h
